2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Regenerate reference.
	Display has been updated in roboptim-core.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Generalize constraints.
	* include/roboptim/core/plugin/ipopt.hh,
	* src/roboptim-core-ipopt-plugin.cc,
	* tests/hs071.hh,
	* tests/plugin.cc,
	* tests/simple.cc:
	Update to new generalized constraint system.

2009-06-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix build-chain when headers are in non-standard directories.
	* src/Makefile.am,
	* tests/Makefile.am: Add ROBOPTIMCORE_CFLAGS to CPPFLAGS.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* doc/sf-upload.sh.in: Here.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux/boost.m4: New.
	* build-aux/deb.mk: New.
	* build-aux/doxygen.m4: New.
	* build-aux/ebuild.mk: New.
	* build-aux/init.mk: Synchronize.
	* build-aux/move-if-change: New.
	* build-aux/pkg-config.mk: New.
	* build-aux/pkg-config.pc.in: New.
	* build-aux/rpm.mk: New.
	* configure.ac,
	* doc/Doxyfile.in,
	* doc/Makefile.am,
	* doc/sf-upload.sh.in: Synchronize.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Update to new interface.
	* include/roboptim/core/plugin/ipopt.hh,
	* src/doc.hh,
	* src/roboptim-core-ipopt-plugin.cc,
	* tests/hs071.hh: Update to new interface and document.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove pkg.m4.
	* build-aux/pkg.m4: Remove.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add Libtool rules.
	* Makefile.am: Here.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Link against all Ipopt dependencies.
	* src/Makefile.am: Here.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Make Libtool support more robust, link against roboptim-core.
	* .gitignore: Remove committed files from ignore list.